# reshala

./: .gitignore  LICENSE  cabal.project  flake.nix  fourmolu.yaml  reshala.cabal
app/: Main.hs
src/: Pre.hs  Reshala.hs
src/Reshala/: AST.hs  SAT.hs
src/Reshala/SAT/: CNF.hs  Expr.hs  Parser.hs  Token.hs
src/Reshala/SAT/Solver/: Naive.hs  Table.hs
test/: Main.hs
