cabal-version:      3.14
name:               reshala
version:            0.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple

common defaults
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
    -Wno-orphans

library
    import:           defaults, warnings
    hs-source-dirs:   src
    exposed-modules:  Reshala, Reshala.SAT
    build-depends:    base

executable reshala
    import:           defaults, warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        reshala

test-suite reshala-test
    import:           defaults, warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        reshala
