cabal-version: 3.0
name:          reshala
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common defaults
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    MonoLocalBinds
    MultilineStrings
    NoFieldSelectors
    NoImplicitPrelude
    OrPatterns

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Werror -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
    -Wno-orphans -fhide-source-paths -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-safe
    -Wno-monomorphism-restriction -Wno-prepositive-qualified-module
    -Wno-unused-packages -Wno-missing-role-annotations
    -Wno-missing-poly-kind-signatures

library
  import:          defaults, warnings
  hs-source-dirs:  src
  exposed-modules:
    Pre
    Reshala
    Reshala.SAT
    Reshala.SAT.CNF

  build-depends:
    , base
    , generic-lens
    , lens
    , recursion-schemes

executable reshala
  import:         defaults, warnings
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , reshala

test-suite reshala-test
  import:         defaults, warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base
    , reshala
