cabal-version: 3.0
name:          reshala
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common defaults
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    FunctionalDependencies
    MonoLocalBinds
    MultilineStrings
    NoFieldSelectors
    OrPatterns
    PatternSynonyms

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Werror -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
    -Wno-orphans -fhide-source-paths -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-safe
    -Wno-monomorphism-restriction -Wno-prepositive-qualified-module
    -Wno-unused-packages -Wno-missing-role-annotations
    -Wno-missing-poly-kind-signatures
    -Wno-missing-pattern-synonym-signatures

common deps
  build-depends:
    , ya
    , ya-ascii
    , base
    , containers
    , generic-lens
    , lens
    , megaparsec
    , nonempty-containers
    , optparse-applicative
    , parser-combinators
    , recursion-schemes
    , text

library
  import:             defaults, warnings, deps
  hs-source-dirs:     src
  exposed-modules:
    Pre
    Reshala
    Reshala.AST
    Reshala.SAT
    Reshala.SAT.CNF
    Reshala.SAT.Expr
    Reshala.SAT.Parser
    Reshala.SAT.Solver.Naive
    Reshala.SAT.Solver.Table
    Reshala.SAT.Token

  default-extensions: NoImplicitPrelude

executable reshala
  import:         defaults, warnings, deps
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  reshala

test-suite reshala-test
  import:         defaults, warnings, deps
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , hedgehog
    , reshala
    , tasty
    , tasty-hedgehog
    , tasty-hunit
